2010-04-23 12:30 JST  norton
        * jsf.erl, jsf_driver.erl: Refactor to easily support new protocol
	drivers.

2010-04-22 12:45 JST  norton
        * src/jsf.erl, src/jsf_driver.erl, src/jsf_utils: Refactor and
	move non ubf/ebf drivers to their own repository.

2009-12-26 14:50 JST  norton
	* src/Makefile,
	src/ubf_jsonrpc.erl, src/ubf_jsonrpc_inets_httpc_simple.erl,
	src/ubf_jsonrpc_inets_httpd_simple.erl,
	src/ubf_jsonrpc_inets_httpd_simple_auth.erl,
	src/Unit-EUnit-Files/ubf_jsonrpc_stateless_plugin.erl,
	src/Unit-EUnit-Files/ubf_jsonrpc_examples_test.erl: import Scott
	Fritchie's changes to make AuthInfo optional

2009-10-29 11:35 JST  norton
        * src/Makefile, src/ubf_jsonrpc.erl, src/ubf_jsonrpc_inets_httpd_simple.erl, src/ubf_jsonrpc_inets_httpc_simple.erl, src/Unit-EUnit-Files/*: inets-based httpd module for JSON-RPC and UBF

2009-10-14 24:00 JST  norton
        * ChangeLog: Add new ChangeLog